[package]
name = "non_grid_path_finder"
version = "0.1.0"
authors = ["SCLeo <scucumber@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.64"
#wasm-bindgen-test = "0.3.14"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
  'Document',
  'Element',
  'EventTarget',
  'KeyboardEvent',
  'MouseEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
